[package]
name = "ray_cast"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { version = "0.4.5"}

log = "0.4.21"

[target.wasm32-unknown-unknown.dependencies]
sapp-console-log = "0.1.9"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
env_logger = "0.11.3" # any other log-rs frontend will work fine as well